# dia-fastapi-server

./: .env.example  .gitignore  API_DOCUMENTATION.md  API_QUICK_REFERENCE.md  AUDIO_PROMPT_TRANSCRIPT_GUIDE.md  AUDIO_PROMPT_TROUBLESHOOTING.md  CUDA_OPTIMIZATION_SUMMARY.md  Dockerfile  Dockerfile.cpu  GPU_STARTUP_GUIDE.md  OPENAI_REMOVAL_SUMMARY.md  README.md  SEED_PARAMETER_GUIDE.md  SPEAKER_TAG_GUIDE.md  STARTUP_TROUBLESHOOTING.md  WHISPER_SOLUTION_GUIDE.md  ZERO_VOICES_CHANGES.md  add_audio_prompt_debugging.py  apply_integration.py  audio_prompt_manager.py  benchmark_audio_prompt_gpu.py  check_seraphina.py  check_voice_setup.py  compare_female_voices.py  create_seraphina_voice.py  debug_audio_prompt.py  debug_audio_prompt_deep.py  diagnose_voice_gpu.py  docker-compose.yml  fix_audio_prompt_transcript.py  fix_gpu_detection.py  fix_seraphina_audio_prompt.py  fix_voice_gender.py  install_gpu_pytorch.bat  install_whisper_fixed.py  manage_audio_prompts.py  openapi_spec.yaml  patch_server_env.py  pyproject.toml  pytest.ini  (+25 more)
docs/: API_EXAMPLES.md  API_REFERENCE.md  GPU_STARTUP_GUIDE.md  SETUP_SUMMARY.md  VOICE_CLONING_ANALYSIS.md  WHISPER_SETUP_GUIDE.md  WINDOWS_SETUP.md
src/: server.py  server_simple.py
tests/: FINAL_TEST_STATUS.md  README.md  TEST_FIXES_SUMMARY.md  TEST_SUMMARY.md  conftest.py  test_api_endpoints.py  test_audio_processing.py  test_job_queue.py  test_worker_pool.py
